canal/canal-admin-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-default-canal-admin
  name: canal-admin
  namespace: canal
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-default-canal-admin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canal-admin
        workload.user.cattle.io/workloadselector: deployment-default-canal-admin
    spec:
      containers:
      - env:
        - name: canal.adminPasswd
          value: admin
        - name: canal.adminUser
          value: admin
        - name: server.port
          value: "8089"
        - name: spring.datasource.address
          value: 192.168.10.9:3306
        - name: spring.datasource.database
          value: canal_manager
        - name: spring.datasource.password
          value: canal
        - name: spring.datasource.username
          value: canal
        image: harbor.eyolo.net/docker.io/canal/canal-admin:v1.1.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8089
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        name: canal-admin
        ports:
        - containerPort: 8089
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8089
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 2
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 1600m
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 4Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
