canal/canal-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: canal-admin
  namespace: canal
spec:
  ports:
  - name: http
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    app: canal-admin
  sessionAffinity: None
  type: ClusterIP
